[package]
name = "ggez-assets_manager"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "`assets_manager` integration for `ggez`"

repository = "https://github.com/a1phyr/ggez-assets_manager"
documentation = "https://docs.rs/ggez-assets_manager"

categories = ["caching", "filesystem", "game-development"]
keywords = ["assets", "cache", "ggez", "hot-reloading", "resources"]


[features]
default = ["ahash"]

ahash = ["assets_manager/ahash"]
hot-reloading = ["assets_manager/hot-reloading"]

[dependencies]
assets_manager = { version = "0.11", default-features = false, features = ["utils", "parking_lot", "zip", "image"] }
ggez = { version = "0.9.0", default-features = false, features = ["audio"] }

directories = "5.0"
image = { version = "0.24", default-features = false, features = ["png", "bmp", "webp", "jpeg"] }
log = "0.4"
parking_lot = "0.12"

[dev-dependencies]
env_logger = "0.10"
