[package]
name = "ggez-assets_manager"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "`assets_manager` integration for `ggez`"

repository = "https://github.com/a1phyr/ggez-assets_manager"
documentation = "https://docs.rs/ggez-assets_manager"

categories = ["caching", "filesystem", "game-development"]
keywords = ["assets", "cache", "ggez", "hot-reloading", "resources"]


[features]
default = ["faster-hash"]

faster-hash = ["assets_manager/faster-hash"]
hot-reloading = ["assets_manager/hot-reloading"]

[dependencies]
assets_manager = { version = "0.13.1", default-features = false, features = ["utils"] }
ggez = { version = "=0.10.0-rc0", default-features = false, features = ["audio", "gamepad"] }

log = "0.4"

[dev-dependencies]
assets_manager = { version = "0.13.1", default-features = false, features = ["ron", "macros"] }
env_logger = "0.11"
serde = "1.0.219"
